# Project_00001-PMIS

./: README.md  index.js
Project_00001[PMIS]/: .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_COMPLETION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_REFERENCE.md  ENV_VARS.md  INTEGRATION_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_INDEX.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_GUIDE.md  PRODUCTION_VISUAL_REFERENCE.md  README.md  pmis-start.bat  test-prod-compose.sh
Project_00001[PMIS]/apps/api/: Dockerfile  TOOLS.md  pyproject.toml
Project_00001[PMIS]/apps/api/app/: database.py  graph.py  main.py  routes.py  routes_v2.py  schemas.py
Project_00001[PMIS]/apps/api/app/policies/: __init__.py  approval_matrix.py  risk_arbitration.py  status_transitions.py  validator.py
Project_00001[PMIS]/apps/api/app/tools/: __init__.py  idempotency.py  memory_tools.py  models.py  ops_orchestrator.py  read_tools.py  user_context.py  write_tools.py
Project_00001[PMIS]/apps/api/scripts/: attach_demo_attachment.py  create_supportbot_tables.py  seed_telemetry.py
Project_00001[PMIS]/apps/api/tests/: conftest.py  test_api_integration.py  test_approval_matrix.py  test_approval_workflow.py  test_memory_tools.py  test_read_tools.py  test_risk_arbitration.py  test_status_transitions.py  test_validator.py  test_worker_integration.py  test_write_tools.py
Project_00001[PMIS]/apps/worker/: Dockerfile  README.md  db.py  pyproject.toml  worker.py
Project_00001[PMIS]/apps/worker/tasks/: supervision.py  tech_radar.py
(+31 files in other folders)
